--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ h1 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-top: 7%;
   font-size: 50px;
+  color: goldenstick;
 }
 #message-el {
   font-style: italic;
@@ -23,4 +24,5 @@ button {
 }
 #win-el {
   font-size: 100px;
+  color: goldenstick;
 }
